--- a/src/input.css
+++ b/src/input.css
@@ -8,3 +8,11 @@
 #toggle:checked ~ label div.toggle-circle {
     @apply translate-x-3
 }
+
+@layer components {
+    .grid-card
+    { 
+        @apply h-16 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden relative hover:scale-95 transition-all duration-1000;
+
+    }
+}
